Implement cascade delete for entities for fix deletion issues for Books, Authors, Categories, Loans, and Reservations; Add missing fine deletion endpoint.